add sample create user
